--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,8 @@
-
-
-
-h1,
-p {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+div {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+
+
