--- a/src/app.css
+++ b/src/app.css
@@ -25,7 +25,7 @@ h1 {
 h1 i {
   color: #0c1e40;
 }
-input[type="text"] {
+input[type='text'] {
   vertical-align: top;
   display: inline-block;
   flex-grow: 1;
